Add  missing availability annotations for macOS 10.12.

https://chromium-review.googlesource.com/c/572149/ was
landed without any availability annotations. This causes
"-Wunguarded-availability" warnings to be triggered when
compiling against the 10.12 SDK.

Bug: 747693
Change-Id: I08a6bc1937bebf17f1d05f6185cb6233472b36a3
Reviewed-on: https://chromium-review.googlesource.com/583850
Reviewed-by: Erik Chen <erikchen@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489679}
Former-commit-id: 1a10b0cc3a3c52b16ea8734aab307ebee28c3496