chrome/browser/ui/cocoa/autofill/autofill_popup_view_cocoa.h
@@ -8,6 +8,7 @@
 #import <Cocoa/Cocoa.h>
 #include <stddef.h>
 
+#include "base/mac/availability.h"
 #import "chrome/browser/ui/cocoa/autofill/autofill_popup_base_view_cocoa.h"
 #import "ui/base/cocoa/touch_bar_forward_declarations.h"
 
@@ -38,7 +39,7 @@ class AutofillPopupViewCocoaDelegate;
 - (void)invalidateRow:(NSInteger)row;
 
 // Creates and returns a touch bar if the popup is for credit cards.
-- (NSTouchBar*)makeTouchBar;
+- (NSTouchBar*)makeTouchBar API_AVAILABLE(macos(10.12.2));
 
 @end
 
