chrome/browser/ui/cocoa/web_textfield_touch_bar_controller.h
@@ -29,7 +29,7 @@
 - (void)showCreditCardAutofillForPopupView:(AutofillPopupViewCocoa*)popupView;
 
 // Creates and returns a touch bar.
-- (NSTouchBar*)makeTouchBar;
+- (NSTouchBar*)makeTouchBar API_AVAILABLE(macos(10.12.2));
 
 @end
 
